Listas Simplemente Enlazadas, Creación e Inserción al Inicio